# scout

./: README.md
client/: README.md  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx
client/app/(auth)/: layout.tsx
client/app/(auth)/login/: page.tsx
client/app/(auth)/signup/: page.tsx
client/app/(dashboard)/: layout.tsx  page.tsx
client/app/(dashboard)/jobs/: page.tsx
client/app/(dashboard)/jobs/[id]/report/: page.tsx
client/app/auth/callback/: route.ts
client/components/: AuthProvider.tsx
client/components/ui/: input.tsx  textarea.tsx
client/lib/: api.ts  hooks.ts
server/: main.py  pyproject.toml
server/src/agents/: researcher.py  scraper.py  supervisor.py  writer.py
server/src/api/: app.py  deps.py
server/src/api/routes/: jobs.py  research.py
server/src/db/: client.py  queries.py
server/src/graph/: graph.py  state.py
server/src/models/: schemas.py
